# hydroponics_delivery_robot

./: .gitignore  README.md  database.mwb  database.mwb.bak  notes.txt
Arduino/Robot/: Robot.ino  uart_commands.h
Identifier_recognition/Haar/: haarcascade\cascade.xml  haarcascade\params.xml  haarcascade\stage0.xml  haarcascade\stage1.xml  haarcascade\stage10.xml  haarcascade\stage11.xml  haarcascade\stage12.xml  haarcascade\stage13.xml  haarcascade\stage14.xml  haarcascade\stage15.xml  haarcascade\stage2.xml  haarcascade\stage3.xml  haarcascade\stage4.xml  haarcascade\stage5.xml  haarcascade\stage6.xml  haarcascade\stage7.xml  haarcascade\stage8.xml  haarcascade\stage9.xml
Identifier_recognition/detector/: CMakeLists.txt  detect_identifier.cpp  detect_identifier.hpp  main.cpp  run_detector
RasberryPi/: commivoayger_exp1.cpp  notes_about_commivoyager.txt  script1.py  serial_test.py
RasberryPi/main_application/: CMakeLists.txt  CMakeLists_rasp_backup.txt  CMakeLists_ubuntu_backup.txt  common.hpp  error_codes.hpp  main.cpp  main_application  route_processor.cpp  route_processor.hpp  serial.cpp  serial.hpp  serial_test.cpp  (+5 more)
RasberryPi/network_part/robot_server/: CMakeLists.txt  Server_preferences.cpp  Server_preferences.hpp  Singleton.cpp  Singleton.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  main.cpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  robot_server  server.cpp  server.hpp
VideoStreaming/: camera.py  main.py
site/: hydroplantsdb.sqlite3
(+13 files in other folders)
